# vizonline

./: Dockerfile  System_Setup_2.sh  heroku_setup.sh  languageMaps.js  launch-frontend.sh  package-lock.json  package.json  server.js  systemSetup.sh
client/: package-lock.json  package.json
client/public/: index.html
client/src/: App.css  App.js
functions/: execute.js  generateFile.js
functions/codeFiles/: e7d1b664-d212-410c-90c4-8a5793b2b398.viz
functions/viz/: .gitignore  Dockerfile  Makefile  README.md  System_Setup_1.sh  dune-project  errors.txt  launch-container.sh  references.txt  result.txt  run_viz_tests.sh  script-test-programs.sh  viz  viz.opam  vizDocker  vizOutput
functions/viz/_build/: log 2  loop_while.s  test_prints.ll
functions/viz/_build/default/: README.md  viz.dune-package  viz.install
functions/viz/lib/: ast.ml  dune  irgen.ml  parser.mly  sast.ml  scanner.mll  semant.ml
functions/viz/lib/builtins/: Makefile  cast.c  list.c  print.c  strings.c
functions/viz/lib/fmt/: ast_fmt.ml  sast_fmt.ml  token_fmt.ml
functions/viz/test/parser/: fail-var-no-type.err  script-parsing.sh  test-binary-arithmetic.ref  test-binary-arithmetic.viz  test-binary-logic.ref  test-binary-logic.viz  test-hello-world.ref  test-hello-world.viz  test-incompatible-types.ref  test-incompatible-types.viz  test-unary-logic.ref  test-unary-logic.viz  test-variable-decl.ref  test-variable-decl.viz
functions/viz/test/programs/: arithmetic_negative_numbers.ref  assignment.ref  fail-bad-binop.ref  fail-bad-binop.viz  helloworld.ref  (+110 more)
functions/viz/writeups/: readme.txt
(+136 files in other folders)
